fix admin bar overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,7 @@ body
 	/*color: #fff;*/
 	color: black;
 }
+
 /*Owl Carousel*/
 .owl-prev, .owl-next
 {
@@ -165,7 +166,7 @@ li a:hover:not(.active) {
 */
 
 /* end fixed top nav menu */
-
+/*
 .section-background{
 	background-repeat: no-repeat;
 	background-position: top;
@@ -177,12 +178,12 @@ li a:hover:not(.active) {
 	height: 400px;
 
 }
-
+*/
 .accommodation{
 	background-repeat: no-repeat;
 	background-position: top;
 	background-attachment: fixed;
-	background: url('../images/section-header.png');
+	background: url('../images/acc-header.png');
 	text-align: center;
 	background-size: cover;
 	margin-top: 50px;
